Use of a substations hierarchy for ordering generators in generation dispatch
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>