@@ -23,6 +23,7 @@ import com.powsybl.iidm.network.Identifiable;
 import com.powsybl.iidm.network.IdentifiableType;
 import com.powsybl.iidm.network.Load;
 import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.Substation;
 import com.powsybl.iidm.network.extensions.GeneratorStartup;
 import com.powsybl.network.store.iidm.impl.NetworkImpl;
 import lombok.Builder;
@@ -32,6 +33,7 @@ import org.gridsuite.modification.server.dto.FilterEquipments;
 import org.gridsuite.modification.server.dto.GenerationDispatchInfos;
 import org.gridsuite.modification.server.dto.GeneratorsFilterInfos;
 import org.gridsuite.modification.server.dto.IdentifiableAttributes;
+import org.gridsuite.modification.server.dto.SubstationsGeneratorsOrderingInfos;
 import org.gridsuite.modification.server.service.FilterService;
 import org.springframework.context.ApplicationContext;
 import org.springframework.util.CollectionUtils;
@@ -43,8 +45,13 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -64,6 +71,7 @@ public class GenerationDispatch extends AbstractModification {
     private static final String STACKING = "Stacking";
     private static final String RESULT = "Result";
     private static final String GENERATOR = "generator";
+    private static final String SUBSTATION = "substation";
     private static final double EPSILON = 0.001;
 
     private final GenerationDispatchInfos generationDispatchInfos;
@@ -155,8 +163,18 @@ public class GenerationDispatch extends AbstractModification {
         return balance.get();
     }
 
-    private static List<Generator> computeAdjustableGenerators(Component component, List<String> generatorsWithFixedSupply, Reporter reporter) {
-        List<Generator> res;
+    private static Double getGeneratorMarginalCost(Generator generator) {
+        GeneratorStartup startupExtension = generator.getExtension(GeneratorStartup.class);
+        if (startupExtension != null && !Double.isNaN(startupExtension.getMarginalCost())) {
+            return startupExtension.getMarginalCost();
+        }
+        return null;
+    }
+
+    private static List<Generator> computeAdjustableGenerators(Network network, Component component, List<String> generatorsWithFixedSupply,
+                                                               List<SubstationsGeneratorsOrderingInfos> substationsGeneratorsOrderingInfos,
+                                                               Reporter reporter) {
+        List<Generator> generatorsWithMarginalCost;
 
         // get all generators in the component
         List<Generator> generators = component.getBusStream().flatMap(Bus::getGeneratorStream).collect(Collectors.toList());
@@ -167,26 +185,87 @@ public class GenerationDispatch extends AbstractModification {
         // set targetP to 0
         generators.forEach(generator -> generator.setTargetP(0.));
 
-        // adjustable generators : generators with marginal cost
-        res = generators.stream().filter(generator -> {
-            GeneratorStartup startupExtension = generator.getExtension(GeneratorStartup.class);
-            boolean marginalCostAvailable = startupExtension != null && !Double.isNaN(startupExtension.getMarginalCost());
-            if (!marginalCostAvailable) {
+        // get generators with marginal cost
+        generatorsWithMarginalCost = generators.stream().filter(generator -> {
+            Double marginalCost = getGeneratorMarginalCost(generator);
+            if (marginalCost == null) {
                 report(reporter, Integer.toString(component.getNum()), "MissingMarginalCostForGenerator", "The generator ${generator} does not have a marginal cost",
                     Map.of(GENERATOR, generator.getId()), TypedValue.WARN_SEVERITY);
             }
-            return marginalCostAvailable;
+            return marginalCost != null;
         }).collect(Collectors.toList());
 
-        // sort generators by marginal cost, and then by alphabetic order of id
-        res.sort(Comparator.comparing(generator -> ((Generator) generator).getExtension(GeneratorStartup.class).getMarginalCost())
-            .thenComparing(generator -> ((Generator) generator).getId()));
+        // build map of generators by marginal cost
+        generatorsWithMarginalCost.sort(Comparator.comparing(GenerationDispatch::getGeneratorMarginalCost));
+        Map<Double, List<String>> generatorsByMarginalCost = new TreeMap<>();
+        generatorsWithMarginalCost.forEach(g -> {
+            Double marginalCost = getGeneratorMarginalCost(g);
+            generatorsByMarginalCost.computeIfAbsent(marginalCost, k -> new ArrayList<>());
+            generatorsByMarginalCost.get(marginalCost).add(g.getId());
+        });
 
-        if (res.isEmpty()) {
+        List<String> generatorsToReturn = new ArrayList<>();
+
+        generatorsByMarginalCost.forEach((mCost, gList) -> {  // loop on generators of same cost
+            if (!CollectionUtils.isEmpty(substationsGeneratorsOrderingInfos)) {  // substations hierarchy provided
+                // build mapGeneratorsBySubstationsList, that will contain all the generators with the same marginal cost as mCost contained in each list of substations
+                LinkedHashMap<Integer, Set<String>> mapGeneratorsBySubstationsList = new LinkedHashMap<>();
+
+                AtomicInteger i = new AtomicInteger(0);
+                substationsGeneratorsOrderingInfos.forEach(sInfo -> {
+                    mapGeneratorsBySubstationsList.computeIfAbsent(i.get(), k -> new TreeSet<>());
+
+                    // get generators with marginal cost == mCost in all substations of the current list
+                    sInfo.getSubstationIds().forEach(sId -> {
+                        Substation substation = network.getSubstation(sId);
+                        if (substation == null) {
+                            report(reporter, Integer.toString(component.getNum()), "SubstationNotFound", "Substation ${substation} not found",
+                                Map.of(SUBSTATION, sId), TypedValue.INFO_SEVERITY);
+                            return;
+                        }
+                        substation.getVoltageLevelStream().forEach(v ->
+                            v.getGeneratorStream().filter(g -> {
+                                Double generatorCost = getGeneratorMarginalCost(g);
+                                return generatorCost != null && generatorCost.equals(mCost);
+                            }).forEach(g -> mapGeneratorsBySubstationsList.get(i.get()).add(g.getId())));
+                    });
+
+                    i.incrementAndGet();
+                });
+
+                // loop until all the generators have been encountered
+                AtomicBoolean finished = new AtomicBoolean(false);
+                while (!finished.get()) {
+                    finished.set(true);
+                    mapGeneratorsBySubstationsList.values().forEach(generatorsSet -> {
+                        if (generatorsSet.isEmpty()) {  // no generators
+                            return;
+                        }
+                        Optional<String> gId = generatorsSet.stream().findFirst();
+                        generatorsToReturn.add(gId.get());
+                        generatorsSet.remove(gId.get());
+                        finished.set(false);
+                    });
+                }
+
+                // add in the result the generators with same cost not found in mapGeneratorsBySubstationsList sorted in alphabetical order
+                gList.stream().sorted().forEach(gId -> {
+                    if (!generatorsToReturn.contains(gId)) {
+                        generatorsToReturn.add(gId);
+                    }
+                });
+            } else {  // no substations hierarchy provided
+                // add in the result the generators in gList sorted in alphabetical order
+                gList.stream().sorted().forEach(generatorsToReturn::add);
+            }
+        });
+
+        if (generatorsToReturn.isEmpty()) {
             report(reporter, Integer.toString(component.getNum()), "NoAvailableAdjustableGenerator", "There is no adjustable generator",
                 Map.of(), TypedValue.WARN_SEVERITY);
         }
-        return res;
+
+        return generatorsToReturn.stream().map(network::getGenerator).toList();
     }
 
     private static class GeneratorTargetPListener extends DefaultNetworkListener {
@@ -359,7 +438,9 @@ public class GenerationDispatch extends AbstractModification {
             }
 
             // get adjustable generators in the component
-            List<Generator> adjustableGenerators = computeAdjustableGenerators(component, generatorsWithFixedSupply, powerToDispatchReporter);
+            List<Generator> adjustableGenerators = computeAdjustableGenerators(network, component, generatorsWithFixedSupply,
+                                                                               generationDispatchInfos.getSubstationsGeneratorsOrdering(),
+                                                                               powerToDispatchReporter);
 
             double realized = 0.;
             if (!adjustableGenerators.isEmpty()) {
@@ -368,7 +449,7 @@ public class GenerationDispatch extends AbstractModification {
                     double minValue = generator.getMinP();
                     double maxValue = reduceGeneratorMaxPValue(generator, generatorsWithoutOutage, generatorsWithFrequencyReserve);
                     return (Scalable) Scalable.onGenerator(generator.getId(), minValue, maxValue);
-                }).collect(Collectors.toList());
+                }).toList();
 
                 Reporter stackingReporter = componentReporter.createSubReporter(STACKING, STACKING);
 
